--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,8 @@ services:
     name: dog-breed-classifier
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "streamlit run app.py --server.port=$PORT --server.address=0.0.0.0"
+    buildCommand: pip install -r requirements.txt
+    startCommand: streamlit run app.py --server.port=$PORT --server.address=0.0.0.0
     pythonVersion: 3.12.7
+    region: oregon
+    autoDeploy: true
