--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,7 @@ services:
     plan: free
     buildCommand: "pip install -r requirements.txt"
     startCommand: "streamlit run app.py --server.port=$PORT --server.address=0.0.0.0"
-    pythonVersion: 3.12.7
     autoDeploy: true
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.12.7
